added CustomerControllerTest with James & Emily
Problemet med testet är att den vill göra customer_id till en String när den är en int. På så sätt går det inte att testa ännu och behöver vägledning om hur vi kan fixa det.

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,26 @@
             <artifactId>json</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
